<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <TextView
            android:id="@+id/add_income_textbox_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="50dp"
            android:text="@string/add_income_textfield"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="normal|bold|italic"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/add_spurce_of_income_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/add_spurce_of_income_input"
            android:layout_width="277dp"
            android:layout_height="54dp"
            android:layout_marginBottom="92dp"
            android:ems="10"
            android:focusedByDefault="true"
            android:hint="@string/addSourceOfIncomeTextBoxHint"
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect"
            app:layout_constraintBottom_toTopOf="@+id/add_to_db_source_of_income_name"
            app:layout_constraintEnd_toEndOf="@+id/add_income_textbox_page"
            app:layout_constraintStart_toStartOf="@+id/add_income_textbox_page"
            app:layout_constraintTop_toBottomOf="@+id/add_income_textbox_page"
            tools:targetApi="o" />

        <Button
            android:id="@+id/add_to_db_source_of_income_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insertSourceOfIncomeBTN"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/add_spurce_of_income_input"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/add_spurce_of_income_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.414" />

        <Button
            android:id="@+id/delete_all_data_from_si_db"
            android:layout_width="299dp"
            android:layout_height="84dp"
            android:layout_marginBottom="50dp"
            android:text="@string/deleteAllSourceOfIncomeBTN"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/add_income_textbox_page"
            app:layout_constraintStart_toStartOf="@+id/add_income_textbox_page"
            app:layout_constraintTop_toBottomOf="@+id/add_to_db_source_of_income_name"
            app:layout_constraintVertical_bias="0.163" />

        <Button
            android:id="@+id/toSourceOfIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/goToSIPage"
            app:layout_constraintEnd_toEndOf="@+id/delete_all_data_from_si_db"
            app:layout_constraintStart_toStartOf="@+id/delete_all_data_from_si_db"
            app:layout_constraintTop_toBottomOf="@+id/delete_all_data_from_si_db" />


</androidx.constraintlayout.widget.ConstraintLayout>